meja/tests/if-then-else-error.stderr
File "tests/if-then-else-error.meja", line 5, characters 4-5:
Error: Incompatible types bool and int:
       Cannot unify bool and int
